message pseudo_veos_message {
	required int32 pseudo_veos_cmd_id = 1;  /*!< Command ID*/
	optional int32 veos_sub_cmd_id = 2; /* !< Sub command ID */
	optional int32 pseudo_pid = 3; /*!< TID of sending Pseudo Process*/

	optional int64 syscall_retval = 4; /*!< System call return value*/
	optional bytes pseudo_msg = 5; /*!<
				      * Message structure filled Pseudo
				      * and type-casted by VEOS based on
				      * type of message received.
				      * */
};
